<resources>
    <string name="app_name">AndroidUtils</string>

    <!--bottom navigation-->
    <string name="nav_compontents">compontent</string>
    <string name="nav_tools">tools</string>
    <string name="nav_tv">tv</string>
    <string name="nav_lab">lab</string>

    <string name="all_screen_info">设备屏幕信息：%1$s</string>

    <!--Image 相关-->
    <string name="image_src">Src</string>
    <string name="image_add_color">Add Color</string>
    <string name="image_scale">Scale</string>
    <string name="image_clip">Clip</string>
    <string name="image_skew">Skew</string>
    <string name="image_rotate">Rotate</string>
    <string name="image_to_round">To Round</string>
    <string name="image_to_round_border">To Round Border</string>
    <string name="image_to_round_corner">To Round Corner</string>
    <string name="image_to_round_corner_border">To Round Corner Border</string>
    <string name="image_add_corner_border">Add Corner Border</string>
    <string name="image_add_circle_border">Add Circle Border</string>
    <string name="image_add_reflection">Add Reflection</string>
    <string name="image_add_text_watermark">Add Text Watermark</string>
    <string name="image_add_image_watermark">Add Image Watermark</string>
    <string name="image_to_gray">Gray</string>
    <string name="image_fast_blur">Fast Blur</string>
    <string name="image_render_script_blur">Render Script Blur</string>
    <string name="image_stack_blur">Stack Blur</string>
    <string name="image_save">Save</string>
    <string name="image_compress_by_scale">Compress By Scale</string>
    <string name="image_compress_by_quality_half">Compress By Quality Half</string>
    <string name="image_compress_by_quality_max_size">Compress By Quality Max Size</string>
    <string name="image_compress_by_sample_size">Compress By Sample Size</string>

    <!--log 相关-->
    <string name="log_toggle_log">Toggle Log</string>
    <string name="log_toggle_console">Toggle Console</string>
    <string name="log_toggle_tag">Toggle Tag</string>
    <string name="log_toggle_head">Toggle Head</string>
    <string name="log_toggle_border">Toggle Border</string>
    <string name="log_toggle_single">Toggle Single</string>
    <string name="log_toggle_console_filter">Toggle Console Filter</string>
    <string name="log_toggle_file_filter">Toggle File Filter</string>
    <string name="log_toggle_file">Toggle File</string>
    <string name="log_toggle_dir">Toggle Dir</string>
    <string name="log_with_no_tag">Log With No Tag</string>
    <string name="log_with_tag">Log With Tag</string>
    <string name="log_in_new_thread">Log In New Thread</string>
    <string name="log_null">Log Null</string>
    <string name="log_many_params">Log Many Params</string>
    <string name="log_long_string">Log Long String</string>
    <string name="log_to_file">Log To File</string>
    <string name="log_json">Log Json</string>
    <string name="log_xml">Log Xml</string>
    <string name="all_input_port">input original value</string>
    <string name="all_reboot">REBOOT</string>
    <string name="all_tips_ip">网址或IP</string>
    <string name="all_ping">PING</string>
    <string name="all_setting">Setting</string>
    <string name="all_read_info">device info</string>
    <string name="all_reboot_tips">reboot</string>

    <string name="all_install_unknown_source_app">Your app needs to open the "Install unknown source app" switch. Is it allowed?</string>

    <!--Crash-->
    <string name="all_crash_cache_switch">Log collection：</string>
    <string name="all_off">off</string>
    <string name="all_on">on</string>
    <string name="all_crash_clear">Clean up Crash files</string>
    <string name="all_imitate_crash">Simulated crash</string>
    <string name="all_crash_empty_record">No crash record</string>
</resources>
