<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c4c4c4"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_cache_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingStart="@dimen/dp_12"
        android:paddingTop="@dimen/dp_8"
        android:paddingEnd="@dimen/dp_12"
        android:paddingBottom="@dimen/dp_8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/all_crash_cache_switch"
            android:textColor="@android:color/black" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_crash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:checked="false"
            android:textOff="@string/all_off"
            android:textOn="@string/all_on"
            app:showText="true" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <RelativeLayout
        android:id="@+id/layout_clear_crash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@android:color/white"
        android:paddingStart="@dimen/dp_12"
        android:paddingTop="@dimen/dp_8"
        android:paddingEnd="@dimen/dp_12"
        android:paddingBottom="@dimen/dp_8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_crash_clear"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_crash_file_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textColor="@android:color/black" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_imitate_crash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@drawable/selector_click"
        android:paddingStart="@dimen/dp_12"
        android:paddingTop="@dimen/dp_8"
        android:paddingEnd="@dimen/dp_12"
        android:paddingBottom="@dimen/dp_8"
        android:text="@string/all_imitate_crash"
        android:textColor="@android:color/black" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_crash_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
        android:background="@android:color/white"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_crash_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/all_crash_empty_record" />

</androidx.appcompat.widget.LinearLayoutCompat>