<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar_back" />

    <RelativeLayout
        android:id="@+id/layout_clear_crash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@android:color/white">

        <TextView
            style="@style/ListItemStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_crash_clear"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_crash_file_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textColor="@android:color/black" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_cache_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <TextView
            style="@style/ListItemStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/all_crash_cache_switch"
            android:textColor="@android:color/black" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_crash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:checked="true" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_imitate_crash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@drawable/selector_click"
        android:padding="12dp"
        android:text="@string/all_imitate_crash"
        android:textColor="@android:color/black" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="1dp"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/tv_crash_recent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/all_crash_empty_record" />
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>