<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_reboot"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@android:color/white"
        android:paddingStart="@dimen/dp_12"
        android:paddingEnd="@dimen/dp_12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/all_reboot_tips"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/btn_reboot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/dp_10"
            android:text="@string/all_reboot"
            android:textColor="@android:color/holo_blue_light" />
    </RelativeLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@drawable/shape_white_bg"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_read_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/all_read_info" />

        <TextView
            android:id="@+id/tv_device_detial"
            android:layout_width="match_parent"
            android:layout_height="400dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>